--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "banco-malvader-backend",
+    "name": "backend",
     "version": "1.0.0",
-    "description": "Backend para o Banco Malvader",
+    "description": "",
     "main": "server.js",
     "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
         "dev": "nodemon server.js"
     },
@@ -11,10 +12,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.19.2",
-        "mysql2": "^3.9.7",
         "cors": "^2.8.5",
-        "dotenv": "^16.4.5"
+        "express": "^4.19.2",
+        "mysql2": "^3.10.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.2"
