login e validação ok ✅, falta corrigir cadastro de cliente (está retornando erro)

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=sua_senha_mysql
 DB_NAME=banco_malvader
+EMAIL_USER=eduardamarquesnoleto@gmail.com
+EMAIL_PASS=yxel xboc msnl rmcj
