--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
         "express": "^4.19.2",
-        "mysql2": "^3.10.0"
+        "mysql2": "^3.10.0",
+        "nodemailer": "^7.0.3"
     },
     "devDependencies": {
         "nodemon": "^3.1.2"
